test/integration/included/stanc.expected
  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format badrecurse1.stan

Syntax error in file ../included/badrecurse1.stan, line 1, column 0, included from
file ../included/badrecurse1.stan, line 1, column 0, included from
file ../included/badrecurse1.stan, line 1, column 0, included from
file badrecurse1.stan, line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse1.stan
         ^
   -------------------------------------------------

File badrecurse1.stan recursively included itself.


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format badrecurse2.stan

Syntax error in file ../included/badrecurse2.stan, line 1, column 0, included from
file ../included/badrecurse3.stan, line 1, column 0, included from
file ../included/badrecurse2.stan, line 1, column 0, included from
file ../included/badrecurse3.stan, line 1, column 0, included from
file badrecurse2.stan, line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse3.stan
         ^
   -------------------------------------------------

File badrecurse3.stan recursively included itself.


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format badrecurse3.stan

Syntax error in file ../included/badrecurse3.stan, line 1, column 0, included from
file ../included/badrecurse2.stan, line 1, column 0, included from
file ../included/badrecurse3.stan, line 1, column 0, included from
file ../included/badrecurse2.stan, line 1, column 0, included from
file badrecurse3.stan, line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse2.stan
         ^
   -------------------------------------------------

File badrecurse2.stan recursively included itself.


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format dep-warning.stan

Syntax error in file dep-warning.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real z;
               ^
     2:    # I am a deprecated comment.
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format error_spread_over_files.stan

Syntax error in file error_spread_over_files.stan, line 1, columns 2-3, parsing error:
   -------------------------------------------------
     1:    w;
            ^
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl-err.stan

Syntax error in file incl-err.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real z;
               ^
     2:    #include "I'm not here.stan"
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper.stan

Syntax error in file incl_stanc_helper.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include incl_stanc_helper2.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper2.stan

Syntax error in file incl_stanc_helper2.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real w;
               ^
     2:    real x;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_deprecated_warning.stan

Syntax error in file incl_stanc_helper_deprecated_warning.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include dep-warning.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_error_spread_over_files.stan

Syntax error in file incl_stanc_helper_error_spread_over_files.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    int #include error_spread_over_files.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_include_error.stan

Syntax error in file incl_stanc_helper_include_error.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include incl-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_lex_error.stan

Syntax error in file incl_stanc_helper_lex_error.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include lex-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_parse_error.stan

Syntax error in file incl_stanc_helper_parse_error.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include parse-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format incl_stanc_helper_semantic_error.stan

Syntax error in file incl_stanc_helper_semantic_error.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real y;
               ^
     2:    #include sem-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format included-quote.stan
data {
  real y;
  real w;
  real x;
}

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format lex-err.stan

Syntax error in file lex-err.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real z;
               ^
     2:    real w;$
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format parse-err.stan

Syntax error in file parse-err.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real z;
               ^
     2:    real w;=;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format sem-err.stan

Syntax error in file sem-err.stan, line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real z;
               ^
     2:    int w;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_deprecated_warning.stan
parameters {
  real y;
  real z;
}
model {
  y ~ normal(0, 1);
}


Warning: deprecated language construct used in file ../included/dep-warning.stan, line 2, column 2, included from
file ../included/incl_stanc_helper_deprecated_warning.stan, line 2, column 2, included from
file stanc_helper_with_bad_include_deprecated_warning.stan, line 2, column 0:
   -------------------------------------------------
     1:    real z;
     2:    # I am a deprecated comment.
           ^
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_error_spread_over_files.stan
parameters {
  real y;
  int w;
}
model {
  y ~ normal(0, 1);
}


Semantic error in file ../included/incl_stanc_helper_error_spread_over_files.stan, line 2, column 2 to file ../included/error_spread_over_files.stan, line 1, column 4, included from
file stanc_helper_with_bad_include_error_spread_over_files.stan, line 2, column 0:
   -------------------------------------------------
     1:    real y;
     2:    int #include error_spread_over_files.stan
           ^
   -------------------------------------------------

(Transformed) Parameters cannot be integers.

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_include_error.stan

Syntax error in file ../included/incl-err.stan, line 2, column 2, included from
file ../included/incl_stanc_helper_include_error.stan, line 2, column 2, included from
file stanc_helper_with_bad_include_include_error.stan, line 2, column 0, include error:
   -------------------------------------------------
     1:    real z;
     2:    #include "I'm not here.stan"
           ^
   -------------------------------------------------

Could not find include file I'm not here.stan in specified include paths.


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_lex_error.stan

Syntax error in file ../included/lex-err.stan, line 2, column 8, included from
file ../included/incl_stanc_helper_lex_error.stan, line 2, column 2, included from
file stanc_helper_with_bad_include_lex_error.stan, line 2, column 0, lexing error:
   -------------------------------------------------
     1:    real z;
     2:    real w;$
                  ^
   -------------------------------------------------

Invalid character found.

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_parse_error.stan

Syntax error in file ../included/parse-err.stan, line 2, columns 2-9, included from
file ../included/incl_stanc_helper_parse_error.stan, line 2, column 2, included from
file stanc_helper_with_bad_include_parse_error.stan, line 2, column 0, parsing error:
   -------------------------------------------------
     1:    real z;
     2:    real w;=;
                  ^
   -------------------------------------------------

Only top-level variable declarations allowed in data and parameters blocks.


  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_bad_include_semantic_error.stan
parameters {
  real y;
  real z;
  int w;
}
model {
  y ~ normal(0, 1);
}


Semantic error in file ../included/sem-err.stan, line 2, columns 2-8, included from
file ../included/incl_stanc_helper_semantic_error.stan, line 2, column 2, included from
file stanc_helper_with_bad_include_semantic_error.stan, line 2, column 0:
   -------------------------------------------------
     1:    real z;
     2:    int w;
           ^
   -------------------------------------------------

(Transformed) Parameters cannot be integers.

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_good_include.stan
parameters {
  real y;
  real w;
  real x;
}
model {
  y ~ normal(0, 1);
}

  $ ../../../../install/default/bin/stanc --include_paths="../included" --auto-format stanc_helper_with_good_include_err_after_incl.stan
parameters {
  real y;
  real w;
  real x;
}
model {
  real ww = 1;
  y ~ normal(0, 1);
}
generated quantities {
  print(ww);
}


Semantic error in file stanc_helper_with_good_include_err_after_incl.stan, line 9, columns 8-10:
   -------------------------------------------------
     7:  }
     8:  generated quantities {
     9:    print(ww);
                 ^
    10:  }
   -------------------------------------------------

Identifier 'ww' not in scope.

